--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "validator": "^13.9.0"
   },
   "scripts": {
-    "start": "kill -9 $(lsof -ti:3000,3001) && npm run dev",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   }
 }
