--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "dependencies": {
+    "@netlify/functions": "^2.8.1",
     "@sendgrid/mail": "^7.7.0",
+    "@types/express": "^4.17.21",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
+    "serverless-http": "^3.2.0",
     "tld-extract": "^2.1.0",
     "validator": "^13.9.0"
   },
